final with design

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>APIs</title>
 </head>
 
-<body>
+<body style="background: center url(../API-buttons/assets/images/Avengers-Poster.png)">
   <!-- buttons for topics -->
   <div class="container">
     <div class="row">
@@ -28,7 +28,7 @@
       <!-- adding button -->
       <div class="col-lg-5">
         <form id="hero-form">
-          <label for="hero-input">Add a Hero</label>
+          <label for="hero-input" class="text-white">Add a Hero</label>
           <input type="text" id="hero-input">
           <input id="add-hero" type="submit" value="Add">
         </form>
